2013-02-21 <jthaler>
   First version submitted to fjcontrib
2013-02-20 <jthaler>
   Initial creation based on previous plugin hosted at http://www.jthaler.net/jets/


