@@ -28,19 +28,6 @@ jet #   rapidity        phi         pt          m          e     subTau
     1     -0.866      2.907    798.567     11.098   1117.518   0.003876
     2     -0.890      2.913    149.669      8.252    213.287   0.001190
 total     -0.867      2.905    983.387     39.991   1378.162   0.007390
-Multi-Pass Minimization Axes:
-jet #   rapidity        phi         pt          m          e     subTau
-    0     -0.867      2.905    983.387     39.991   1378.162   0.011996
-total     -0.867      2.905    983.387     39.991   1378.162   0.011996
-jet #   rapidity        phi         pt          m          e     subTau
-    0     -0.796      2.821     36.926      4.124     49.558   0.002058
-    1     -0.870      2.908    946.596     25.745   1328.604   0.007213
-total     -0.867      2.905    983.387     39.991   1378.162   0.009271
-jet #   rapidity        phi         pt          m          e     subTau
-    0     -0.796      2.821     36.926      4.124     49.558   0.002058
-    1     -0.866      2.907    796.929     11.662   1115.317   0.003672
-    2     -0.890      2.913    149.669      8.252    213.287   0.001073
-total     -0.867      2.905    983.387     39.991   1378.162   0.006802
 One Pass Minimization Axes from kT
 jet #   rapidity        phi         pt          m          e     subTau
     0     -0.867      2.905    983.387     39.991   1378.162   0.011996
@@ -57,7 +44,6 @@ total     -0.867      2.905    983.387     39.991   1378.162   0.006802
 -------------------------------------------------------------------------------------
 Beta = 1
      kT: tau1: 0.0125188  tau2: 0.0101401  tau3: 0.00739039  tau2/tau1: 0.809988  tau3/tau2: 0.728831
-    Min: tau1: 0.0119956  tau2: 0.00927023  tau3: 0.00680249  tau2/tau1: 0.772802  tau3/tau2: 0.733799
 OnePass: tau1: 0.0119958  tau2: 0.00927143  tau3: 0.00680249  tau2/tau1: 0.772888  tau3/tau2: 0.733704
 
 -------------------------------------------------------------------------------------
@@ -78,19 +64,6 @@ jet #   rapidity        phi         pt          m          e     subTau
     1      0.215      6.027    686.868     48.049    704.488   0.010855
     2      0.232      6.038    213.757     10.389    219.808   0.002692
 total      0.219      6.035    908.098     87.712    934.387   0.015849
-Multi-Pass Minimization Axes:
-jet #   rapidity        phi         pt          m          e     subTau
-    0      0.219      6.035    908.098     87.712    934.387   0.017642
-total      0.219      6.035    908.098     87.712    934.387   0.017642
-jet #   rapidity        phi         pt          m          e     subTau
-    0      0.219      6.029    899.897     57.351    923.483   0.011002
-    1      0.239      0.312      9.701      4.270     10.904   0.002706
-total      0.219      6.035    908.098     87.712    934.387   0.013708
-jet #   rapidity        phi         pt          m          e     subTau
-    0     -0.183      5.978     10.188      3.558     10.973   0.002544
-    1      0.266      0.320      9.443      3.888     10.575   0.002438
-    2      0.224      6.030    889.980     27.789    912.838   0.006285
-total      0.219      6.035    908.098     87.712    934.387   0.011267
 One Pass Minimization Axes from kT
 jet #   rapidity        phi         pt          m          e     subTau
     0      0.219      6.035    908.098     87.712    934.387   0.017650
@@ -107,7 +80,6 @@ total      0.219      6.035    908.098     87.712    934.387   0.012008
 -------------------------------------------------------------------------------------
 Beta = 1
      kT: tau1: 0.0214112  tau2: 0.0156127  tau3: 0.015849  tau2/tau1: 0.729182  tau3/tau2: 1.01514
-    Min: tau1: 0.0176416  tau2: 0.0137081  tau3: 0.0112665  tau2/tau1: 0.777034  tau3/tau2: 0.821884
 OnePass: tau1: 0.0176497  tau2: 0.0137131  tau3: 0.0120083  tau2/tau1: 0.776959  tau3/tau2: 0.875683
 
 -------------------------------------------------------------------------------------
