@@ -1,3 +1,5 @@
+2013-02-22 <jthaler>
+   Fixed memory management and failed make check issues.
 2013-02-21 <jthaler>
    First version submitted to fjcontrib
 2013-02-20 <jthaler>
